--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>If you take a look at the outskirts of the castle you will find me sometime, probably meditating.</p>
         <p>Cyphers are beautiful. Code should be beautiful, even for the ones who don't get it at all. For those, it shall look like the elegant physics equations that have plenty of variables and we don't know any, yet they are beautiful.</p>
         <p>The internet is not such a good or safe place to be, as some like to think. If it were, there would be no need for a dog like me.</p>
-        <p>Security is a business of us all. Nobody can escape it, nobody can ignore it. If you don't know that, you'll be a victim soon.</p>
+        <p>Security is a business of us all. No one can escape it, no one can ignore it. If you don't know that, you'll be a victim soon.</p>
         <p>The essence of social engineering: everybody wants to be special, even spectacular, at some point. Avoid that, avoid that feeling when you realize that someone is instilling it in you. It must come from inside.</p>
     </div>
     <hr />
